--- a/k8s/deploy.yml
+++ b/k8s/deploy.yml
@@ -33,6 +33,9 @@ spec:
               name: http
             - containerPort: 8888
               name: grpc
+          envFrom:
+            - configMapRef:
+                name: example-config
           # resources:
           #   requests:
           #     cpu: 500m
